src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> lista_sentencias
Rule 1     lista_sentencias -> lista_sentencias sentencia SEMICOLON
Rule 2     lista_sentencias -> sentencia SEMICOLON
Rule 3     sentencia -> CREATE TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING
Rule 4     sentencia -> CREATE TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING WITH N EQUALS NUMBER
Rule 5     sentencia -> CREATE TABLE ID LPAREN lista_columnas RPAREN
Rule 6     sentencia -> SHOW TABLES
Rule 7     sentencia -> VIEW INDICES FROM ID
Rule 8     sentencia -> DROP TABLE ID
Rule 9     sentencia -> SELECT ASTERISK FROM ID WHERE ID EQUALS valor
Rule 10    sentencia -> SELECT ASTERISK FROM ID WHERE ID BETWEEN valor AND valor
Rule 11    sentencia -> SELECT ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
Rule 12    sentencia -> SELECT ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN
Rule 13    sentencia -> INSERT INTO ID VALUES LPAREN lista_valores RPAREN
Rule 14    lista_valores -> lista_valores COMMA valor
Rule 15    lista_valores -> valor
Rule 16    sentencia -> DELETE FROM ID WHERE ID EQUALS valor
Rule 17    valor -> STRING
Rule 18    valor -> NUMBER
Rule 19    columna -> ID tipo_dato INDEX tecnica_indice LPAREN ID COMMA ID RPAREN
Rule 20    columna -> ID tipo_dato INDEX tecnica_indice
Rule 21    columna -> ID tipo_dato
Rule 22    lista_columnas -> lista_columnas COMMA columna
Rule 23    lista_columnas -> columna
Rule 24    tipo_dato -> INT
Rule 25    tipo_dato -> FLOAT
Rule 26    tipo_dato -> VARCHAR
Rule 27    tipo_dato -> STR
Rule 28    tecnica_indice -> BTREE
Rule 29    tecnica_indice -> RTREE
Rule 30    tecnica_indice -> HASH
Rule 31    tecnica_indice -> SEQUENTIAL

Terminals, with rules where they appear

AND                  : 10
ASTERISK             : 9 10 11 12
BETWEEN              : 10
BTREE                : 28
COMMA                : 11 11 12 12 14 19 22
CREATE               : 3 4 5
DELETE               : 16
DROP                 : 8
EQUALS               : 4 9 16
FILE                 : 3 4
FLOAT                : 25
FROM                 : 3 4 7 9 10 11 12 16
HASH                 : 30
ID                   : 3 4 5 7 8 9 9 10 10 11 11 12 12 13 16 16 19 19 19 20 21
IN                   : 11 12
INDEX                : 19 20
INDICES              : 7
INSERT               : 13
INT                  : 24
INTO                 : 13
K                    : 12
LPAREN               : 3 4 5 11 11 12 12 13 19
N                    : 4
NUMBER               : 4 18
POINT                : 11 12
RADIUS               : 11
RPAREN               : 3 4 5 11 11 12 12 13 19
RTREE                : 29
SELECT               : 9 10 11 12
SEMICOLON            : 1 2
SEQUENTIAL           : 31
SHOW                 : 6
STR                  : 27
STRING               : 3 4 17
TABLE                : 3 4 5 8
TABLES               : 6
VALUES               : 13
VARCHAR              : 26
VIEW                 : 7
WHERE                : 9 10 11 12 16
WITH                 : 4
error                : 

Nonterminals, with rules where they appear

columna              : 22 23
lista_columnas       : 3 4 5 22
lista_sentencias     : 1 0
lista_valores        : 13 14
sentencia            : 1 2
tecnica_indice       : 19 20
tipo_dato            : 19 20 21
valor                : 9 10 10 11 11 11 12 12 12 14 15 16

Parsing method: LALR

state 0

    (0) S' -> . lista_sentencias
    (1) lista_sentencias -> . lista_sentencias sentencia SEMICOLON
    (2) lista_sentencias -> . sentencia SEMICOLON
    (3) sentencia -> . CREATE TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING
    (4) sentencia -> . CREATE TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> . CREATE TABLE ID LPAREN lista_columnas RPAREN
    (6) sentencia -> . SHOW TABLES
    (7) sentencia -> . VIEW INDICES FROM ID
    (8) sentencia -> . DROP TABLE ID
    (9) sentencia -> . SELECT ASTERISK FROM ID WHERE ID EQUALS valor
    (10) sentencia -> . SELECT ASTERISK FROM ID WHERE ID BETWEEN valor AND valor
    (11) sentencia -> . SELECT ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
    (12) sentencia -> . SELECT ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN
    (13) sentencia -> . INSERT INTO ID VALUES LPAREN lista_valores RPAREN
    (16) sentencia -> . DELETE FROM ID WHERE ID EQUALS valor

    CREATE          shift and go to state 3
    SHOW            shift and go to state 4
    VIEW            shift and go to state 5
    DROP            shift and go to state 6
    SELECT          shift and go to state 7
    INSERT          shift and go to state 8
    DELETE          shift and go to state 9

    lista_sentencias               shift and go to state 1
    sentencia                      shift and go to state 2

state 1

    (0) S' -> lista_sentencias .
    (1) lista_sentencias -> lista_sentencias . sentencia SEMICOLON
    (3) sentencia -> . CREATE TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING
    (4) sentencia -> . CREATE TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> . CREATE TABLE ID LPAREN lista_columnas RPAREN
    (6) sentencia -> . SHOW TABLES
    (7) sentencia -> . VIEW INDICES FROM ID
    (8) sentencia -> . DROP TABLE ID
    (9) sentencia -> . SELECT ASTERISK FROM ID WHERE ID EQUALS valor
    (10) sentencia -> . SELECT ASTERISK FROM ID WHERE ID BETWEEN valor AND valor
    (11) sentencia -> . SELECT ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
    (12) sentencia -> . SELECT ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN
    (13) sentencia -> . INSERT INTO ID VALUES LPAREN lista_valores RPAREN
    (16) sentencia -> . DELETE FROM ID WHERE ID EQUALS valor

    CREATE          shift and go to state 3
    SHOW            shift and go to state 4
    VIEW            shift and go to state 5
    DROP            shift and go to state 6
    SELECT          shift and go to state 7
    INSERT          shift and go to state 8
    DELETE          shift and go to state 9

    sentencia                      shift and go to state 10

state 2

    (2) lista_sentencias -> sentencia . SEMICOLON

    SEMICOLON       shift and go to state 11


state 3

    (3) sentencia -> CREATE . TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING
    (4) sentencia -> CREATE . TABLE ID LPAREN lista_columnas RPAREN FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> CREATE . TABLE ID LPAREN lista_columnas RPAREN

    TABLE           shift and go to state 12


state 4

    (6) sentencia -> SHOW . TABLES

    TABLES          shift and go to state 13


state 5

    (7) sentencia -> VIEW . INDICES FROM ID

    INDICES         shift and go to state 14


state 6

    (8) sentencia -> DROP . TABLE ID

    TABLE           shift and go to state 15


state 7

    (9) sentencia -> SELECT . ASTERISK FROM ID WHERE ID EQUALS valor
    (10) sentencia -> SELECT . ASTERISK FROM ID WHERE ID BETWEEN valor AND valor
    (11) sentencia -> SELECT . ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
    (12) sentencia -> SELECT . ASTERISK FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN

    ASTERISK        shift and go to state 16


state 8

    (13) sentencia -> INSERT . INTO ID VALUES LPAREN lista_valores RPAREN

    INTO            shift and go to state 17


state 9

    (16) sentencia -> DELETE . FROM ID WHERE ID EQUALS valor

    FROM            shift and go to state 18


state 10

    (1) lista_sentencias -> lista_sentencias sentencia . SEMICOLON

    SEMICOLON       shift and go to state 19


state 11

    (2) lista_sentencias -> sentencia SEMICOLON .

    CREATE          reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)
    SHOW            reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)
    VIEW            reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)
    DROP            reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)
    SELECT          reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)
    INSERT          reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)
    DELETE          reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)
    $end            reduce using rule 2 (lista_sentencias -> sentencia SEMICOLON .)


state 12

    (3) sentencia -> CREATE TABLE . ID LPAREN lista_columnas RPAREN FROM FILE STRING
    (4) sentencia -> CREATE TABLE . ID LPAREN lista_columnas RPAREN FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> CREATE TABLE . ID LPAREN lista_columnas RPAREN

    ID              shift and go to state 20


state 13

    (6) sentencia -> SHOW TABLES .

    SEMICOLON       reduce using rule 6 (sentencia -> SHOW TABLES .)


state 14

    (7) sentencia -> VIEW INDICES . FROM ID

    FROM            shift and go to state 21


state 15

    (8) sentencia -> DROP TABLE . ID

    ID              shift and go to state 22


state 16

    (9) sentencia -> SELECT ASTERISK . FROM ID WHERE ID EQUALS valor
    (10) sentencia -> SELECT ASTERISK . FROM ID WHERE ID BETWEEN valor AND valor
    (11) sentencia -> SELECT ASTERISK . FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
    (12) sentencia -> SELECT ASTERISK . FROM ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN

    FROM            shift and go to state 23


state 17

    (13) sentencia -> INSERT INTO . ID VALUES LPAREN lista_valores RPAREN

    ID              shift and go to state 24


state 18

    (16) sentencia -> DELETE FROM . ID WHERE ID EQUALS valor

    ID              shift and go to state 25


state 19

    (1) lista_sentencias -> lista_sentencias sentencia SEMICOLON .

    CREATE          reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)
    SHOW            reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)
    VIEW            reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)
    DROP            reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)
    SELECT          reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)
    INSERT          reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)
    DELETE          reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)
    $end            reduce using rule 1 (lista_sentencias -> lista_sentencias sentencia SEMICOLON .)


state 20

    (3) sentencia -> CREATE TABLE ID . LPAREN lista_columnas RPAREN FROM FILE STRING
    (4) sentencia -> CREATE TABLE ID . LPAREN lista_columnas RPAREN FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> CREATE TABLE ID . LPAREN lista_columnas RPAREN

    LPAREN          shift and go to state 26


state 21

    (7) sentencia -> VIEW INDICES FROM . ID

    ID              shift and go to state 27


state 22

    (8) sentencia -> DROP TABLE ID .

    SEMICOLON       reduce using rule 8 (sentencia -> DROP TABLE ID .)


state 23

    (9) sentencia -> SELECT ASTERISK FROM . ID WHERE ID EQUALS valor
    (10) sentencia -> SELECT ASTERISK FROM . ID WHERE ID BETWEEN valor AND valor
    (11) sentencia -> SELECT ASTERISK FROM . ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
    (12) sentencia -> SELECT ASTERISK FROM . ID WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN

    ID              shift and go to state 28


state 24

    (13) sentencia -> INSERT INTO ID . VALUES LPAREN lista_valores RPAREN

    VALUES          shift and go to state 29


state 25

    (16) sentencia -> DELETE FROM ID . WHERE ID EQUALS valor

    WHERE           shift and go to state 30


state 26

    (3) sentencia -> CREATE TABLE ID LPAREN . lista_columnas RPAREN FROM FILE STRING
    (4) sentencia -> CREATE TABLE ID LPAREN . lista_columnas RPAREN FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> CREATE TABLE ID LPAREN . lista_columnas RPAREN
    (22) lista_columnas -> . lista_columnas COMMA columna
    (23) lista_columnas -> . columna
    (19) columna -> . ID tipo_dato INDEX tecnica_indice LPAREN ID COMMA ID RPAREN
    (20) columna -> . ID tipo_dato INDEX tecnica_indice
    (21) columna -> . ID tipo_dato

    ID              shift and go to state 31

    lista_columnas                 shift and go to state 32
    columna                        shift and go to state 33

state 27

    (7) sentencia -> VIEW INDICES FROM ID .

    SEMICOLON       reduce using rule 7 (sentencia -> VIEW INDICES FROM ID .)


state 28

    (9) sentencia -> SELECT ASTERISK FROM ID . WHERE ID EQUALS valor
    (10) sentencia -> SELECT ASTERISK FROM ID . WHERE ID BETWEEN valor AND valor
    (11) sentencia -> SELECT ASTERISK FROM ID . WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
    (12) sentencia -> SELECT ASTERISK FROM ID . WHERE ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN

    WHERE           shift and go to state 34


state 29

    (13) sentencia -> INSERT INTO ID VALUES . LPAREN lista_valores RPAREN

    LPAREN          shift and go to state 35


state 30

    (16) sentencia -> DELETE FROM ID WHERE . ID EQUALS valor

    ID              shift and go to state 36


state 31

    (19) columna -> ID . tipo_dato INDEX tecnica_indice LPAREN ID COMMA ID RPAREN
    (20) columna -> ID . tipo_dato INDEX tecnica_indice
    (21) columna -> ID . tipo_dato
    (24) tipo_dato -> . INT
    (25) tipo_dato -> . FLOAT
    (26) tipo_dato -> . VARCHAR
    (27) tipo_dato -> . STR

    INT             shift and go to state 38
    FLOAT           shift and go to state 39
    VARCHAR         shift and go to state 40
    STR             shift and go to state 41

    tipo_dato                      shift and go to state 37

state 32

    (3) sentencia -> CREATE TABLE ID LPAREN lista_columnas . RPAREN FROM FILE STRING
    (4) sentencia -> CREATE TABLE ID LPAREN lista_columnas . RPAREN FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> CREATE TABLE ID LPAREN lista_columnas . RPAREN
    (22) lista_columnas -> lista_columnas . COMMA columna

    RPAREN          shift and go to state 42
    COMMA           shift and go to state 43


state 33

    (23) lista_columnas -> columna .

    RPAREN          reduce using rule 23 (lista_columnas -> columna .)
    COMMA           reduce using rule 23 (lista_columnas -> columna .)


state 34

    (9) sentencia -> SELECT ASTERISK FROM ID WHERE . ID EQUALS valor
    (10) sentencia -> SELECT ASTERISK FROM ID WHERE . ID BETWEEN valor AND valor
    (11) sentencia -> SELECT ASTERISK FROM ID WHERE . ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA RADIUS valor RPAREN
    (12) sentencia -> SELECT ASTERISK FROM ID WHERE . ID IN LPAREN POINT LPAREN valor COMMA valor RPAREN COMMA K valor RPAREN

    ID              shift and go to state 44


state 35

    (13) sentencia -> INSERT INTO ID VALUES LPAREN . lista_valores RPAREN
    (14) lista_valores -> . lista_valores COMMA valor
    (15) lista_valores -> . valor
    (17) valor -> . STRING
    (18) valor -> . NUMBER

    STRING          shift and go to state 47
    NUMBER          shift and go to state 48

    lista_valores                  shift and go to state 45
    valor                          shift and go to state 46

state 36

    (16) sentencia -> DELETE FROM ID WHERE ID . EQUALS valor

    EQUALS          shift and go to state 49


state 37

    (19) columna -> ID tipo_dato . INDEX tecnica_indice LPAREN ID COMMA ID RPAREN
    (20) columna -> ID tipo_dato . INDEX tecnica_indice
    (21) columna -> ID tipo_dato .

    INDEX           shift and go to state 50
    RPAREN          reduce using rule 21 (columna -> ID tipo_dato .)
    COMMA           reduce using rule 21 (columna -> ID tipo_dato .)


state 38

    (24) tipo_dato -> INT .

    INDEX           reduce using rule 24 (tipo_dato -> INT .)
    RPAREN          reduce using rule 24 (tipo_dato -> INT .)
    COMMA           reduce using rule 24 (tipo_dato -> INT .)


state 39

    (25) tipo_dato -> FLOAT .

    INDEX           reduce using rule 25 (tipo_dato -> FLOAT .)
    RPAREN          reduce using rule 25 (tipo_dato -> FLOAT .)
    COMMA           reduce using rule 25 (tipo_dato -> FLOAT .)


state 40

    (26) tipo_dato -> VARCHAR .

    INDEX           reduce using rule 26 (tipo_dato -> VARCHAR .)
    RPAREN          reduce using rule 26 (tipo_dato -> VARCHAR .)
    COMMA           reduce using rule 26 (tipo_dato -> VARCHAR .)


state 41

    (27) tipo_dato -> STR .

    INDEX           reduce using rule 27 (tipo_dato -> STR .)
    RPAREN          reduce using rule 27 (tipo_dato -> STR .)
    COMMA           reduce using rule 27 (tipo_dato -> STR .)


state 42

    (3) sentencia -> CREATE TABLE ID LPAREN lista_columnas RPAREN . FROM FILE STRING
    (4) sentencia -> CREATE TABLE ID LPAREN lista_columnas RPAREN . FROM FILE STRING WITH N EQUALS NUMBER
    (5) sentencia -> CREATE TABLE ID LPAREN lista_columnas RPAREN .

    FROM            shift and go to state 51
    SEMICOLON       reduce using rule 5 (sentencia -> CREATE TABLE ID LPAREN lista_columnas RPAREN .)


state 43

    (22) lista_columnas -> lista_columnas COMMA . columna
    (19) columna -> . ID tipo_dato INDEX tecnica_indice LPAREN ID COMMA ID RPAREN
    (20) columna -> . ID tipo_dato INDEX tecnica_indice
    (21) columna -> . ID tipo_dato

    ID              shift and go to state 31

    columna                        shift and go to state 52

state 44
